  * Add upstream Rev. 2930:
    - www/agc/options-example.php,
      www/agc/vdc_script_display.php,
      www/agc/vicidial.php: Added $INSERT_ variables: Added LOGINvar variables, and options.php $INSERT_ variables
  * Add upstream Rev. 2930:
    - www/agc/vdc_db_query.php: Fix for LogiNCamPaigns function, removed unnecesary onfocus trigger, issue #1074
    

2.25.24a
  [Jörg Fring-Fürst]
  * www/vicidial/admin.php: Correct typo.
  * Release 2.25.24a 2018-02-18.

2.25.24
  [Jörg Frings-Fürst]
  * Add upstream Rev. 2881:
    - MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql,
      vdc_db_query.php,
      admin.php,
      UPGRADE,
      help.php: Added next_dial_my_callbacks campaign option.
  * New mysql-1530.sql.
  * Add upstream Rev. 2882:
    - admin.php,
      NON-AGENT_API.txt: Added call_status_stats function.
    - lead_report_export.php: Added vendor lead code filtering option.
  * Upstream Rev. 2882, 2883, 2284, 2885, 2886, 2887 and 2888 not added.
  * Add upstream Rev. 2889:
    - AST_VDhopper.pl,
      MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql,
      admin.php,
      help.php,
      UPGRADE: Added anyone_callback_inactive_lists option.
  * Add upstream Rev. 2890:
    - AST_flush_DBqueue.pl,
      MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql: Added flush for cid_channels_recent table.
  * Add upstream Rev. 2891:
    - lead_report_export.php: Correct SQL statement build.
  * Add download function (2018-001):
    - Add field tmp_download_dir to table system_settings.
    - admin.php: Add field.
    - help.php: Add tag downloaddir.
    - New download.php.
    - functions.php: New function GetTmpDownLoadDir().
    - install.pl: Add mkdir for directory download.
  * New AST_stat_callbacks.php (2018-002);
  * Add upstream Rev. 2892:
    - CALLER_ID_NAME_CODES.txt,
      vicidial.php,
      admin.php,
      admin_header.php,
      admin_lists_custom.php,
      admin_soundboard.php,
      list_split.php,