@@ -5998,6 +5998,10 @@ FR_SPAC 00 00 00 00 00 - <?php echo _QXZ("France space separated phone number");
 <BR>
 <B><?php echo _QXZ("Service Level"); ?> -</B><?php echo _QXZ("Set the time in seconds for the Servicelevel Direct|One|Two only for the Wallboard."); ?>
 
+<BR>
+<A NAME="service_agent_prefix">
+<BR>
+<B><?php echo _QXZ("Agent Prefix"); ?> -</B><?php echo _QXZ("If you have Agents with AgentNo != PhoneNo you can add a Prefix for use in the dialplan."); ?>
 
 <BR><BR><BR><BR>
 
